--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<h2>Informations de l'école :</h2>
 		<ol>
 			<li>Nom: ESGI</li>
-			École Spéciale de Git en Ingénierie ?
+			École Spéciale des ingenieures 
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoine, 75011 Paris</li>
-			A ne pas confondre avec Saint Antoinette
+			ladresse de lecole
 			<li>Directeur: Kamal Hennou</li>
-			Je ne suis ni M. Kamal ni M. Sananes. Et je n'ai pas besoin d'avoir de nom pour t'éliminer ! Oh non ça a été corrigé, je veux la fusion !
-			<li>Prof de git: Thomas Ecalle</li>
-			Un prof passionné, un vrai chou à la crème.
+			le directeur 
+			<li>Prof de git: Mr Nkondjoh </li>
+			Un bon prof.
 		</ol>
 	</section>
 </body>
